--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,34 @@
 # learning
-torch==1.3.1
+torch>=1.3.1
 pytorch-pretrained-bert==0.6.1
 pytorch-transformers==1.1.0
-tokenizers==0.1.1
+tokenizers>=0.1.1
 
 # logging
-tqdm==4.38.0
-colorlog==4.0.2
-terminaltables==3.1.0
+tqdm>=4.38.0
+colorlog>=4.0.2
+terminaltables>=3.1.0
 
 # plotting
-matplotlib==3.0.2
-seaborn==0.9.0
-python-ternary==1.0.6
+matplotlib>=3.0.2
+seaborn>=0.9.0
+python-ternary>=1.0.6
 
 # parsing
-beautifulsoup4==4.4.1
-Unidecode==1.0.22
-nltk==3.4.5
+beautifulsoup4>=4.4.1
+html5lib>=1.0.1
+Unidecode>=1.0.22
+nltk>=3.4.5
 
 # interfacing
-trec-car-tools>=2.5.3
-sqlitedict==1.6.0
+git+https://github.com/TREMA-UNH/trec-car-tools.git#subdirectory=python3
+sqlitedict>=1.6.0
 git+https://github.com/cvangysel/pytrec_eval.git
-gensim==3.7.3
-Cython==0.29.2
-pyjnius==1.2.1
+gensim>=3.7.3
+Cython>=0.29.2
+pyjnius>=1.2.1
 ir_datasets>=0.2.0
 
 # misc
-pytools==2018.5.2
-cached-property==1.5.1
+pytools>=2018.5.2
+cached-property>=1.5.1
