--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torch>=1.3.1
 pytorch-pretrained-bert==0.6.1
 pytorch-transformers==1.1.0
 tokenizers>=0.1.1
+transformers>=4.3.3
 
 # logging
 tqdm>=4.38.0
